--- a/main.html
+++ b/main.html
@@ -5,8 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Nunito:wght@300&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -57,15 +57,17 @@
 
 	<section>
 		<div id="courses">
-
-			<h1>Main IT Paths</h1>
+			<div class="heading">
+				<h1>Main IT Paths</h1>
+				<div class="çizgi"></div>
+			</div>
 
 			<div class="cards">
 
 			<div class="card">
 				<img src="r1.jpg">
 			<div class="content">
-				<h2>Web Development</h2>
+				<h2>AWS/Devops</h2>
 				<p>Learn the fundamentals of cloud computing with using AWS in addition to learning Network basics, Linux, shell scripting, and Git. Also, you will master the most popular DevOps tools such as Docker, Kubernetes, Ansible, Terraform, Jenkins, Prometheus, and Grafana.</p>
 				<a href="">Browse More</a>
 			</div>
@@ -74,7 +76,9 @@
 			<div class="card">
 				<img src="r2.jpg">
 			<div class="content">
-				<p>Learn the fundamentals of cloud computing with using AWS in addition to learning Network basics, Linux, shell scripting, and Git. Also, you will master the most popular DevOps tools such as Docker, Kubernetes, Ansible, Terraform, Jenkins, Prometheus, and Grafana.</p>
+				<h2>Data Science</h2>
+				<p>
+				Learn the most up-to-date front-end and back-end tools by a project-based curriculum. You will make projects to fill your portfolios.</p>
 				<a href="">Browse More</a>
 			</div>
 			</div>
@@ -82,7 +86,8 @@
 			<div class="card">
 				<img src="r2.jpg">
 			<div class="content">
-				<p>Learn the fundamentals of cloud computing with using AWS in addition to learning Network basics, Linux, shell scripting, and Git. Also, you will master the most popular DevOps tools such as Docker, Kubernetes, Ansible, Terraform, Jenkins, Prometheus, and Grafana.</p>
+				<h2>Full Stack Development</h2>
+				<p>Learn how to extract knowledge and insights from different data types with our data science program. You’ll build data analysis and machine learning skills with real-world case studies, and hands-on exercises.</p>
 				<a href="">Browse More</a>
 			</div>
 			</div>
@@ -90,7 +95,8 @@
 			<div class="card">
 				<img src="r4.png">
 			<div class="content">
-				<p>Learn the fundamentals of cloud computing with using AWS in addition to learning Network basics, Linux, shell scripting, and Git. Also, you will master the most popular DevOps tools such as Docker, Kubernetes, Ansible, Terraform, Jenkins, Prometheus, and Grafana.</p>
+				<h2>Cycber Security</h2>
+				<p>Learn the most up-to-date front-end and back-end tools by a project-based curriculum. You will make projects to fill your portfolios.</p>
 				<a href="">Browse More</a>
 			</div>
 			</div>
@@ -99,6 +105,74 @@
 		</div>
 	</section>
 
+	<section id="info">
+		<div class="body">
+			<div class="content">
+				<h5>Clarusway AIR Presents:</h5>
+				<p>Clarusway Air presents a series of FREE courses that are indispensable for IT learners – vital and free like air. We offer the most comprehensive free IT training in the industry due to a commitment to providing the highest quality of learning to all. You can experience the academic excellence of our curated courses independent from your background – you can be a coding newbie or an IT professional who wants to build new skills.</p>
+				<a class="register" href="">Register Now</a>
+			</div>
+			<div class="image">
+				<img src="c.png" alt="">
+			</div>
+		</div>
+	</section>
+
+	<section id="contact">
+		<div class="contact">
+			<div class="video">
+				<h1>Join Info Session</h1>
+				<p>Are you interested? Attend one of our free information sessions to meet our team, learn about our programs, and see if Clarusway is a good fit for your career aspirations!
+				</p>
+				<img src="d.png" alt="video">
+			</div>
+			<div class="form">
+
+				<form>
+					<div class="form-group">
+						<label for="name">Name</label>
+						<input class="form-control" type="text" name="name" required="" placeholder="Name and Surname">
+					</div>
+					<div class="form-group">
+						<label for="name">Name</label>
+						<input class="form-control" type="text" name="name" placeholder="Name and Surname">
+					</div>
+					<div class="form-group">
+						<label for="name">Name</label>
+						<input class="form-control" type="text" name="name" placeholder="Name and Surname">
+					</div>
+					<div class="form-group">
+						<label for="name">Name</label>
+						<input class="form-control" type="text" name="name" placeholder="Name and Surname">
+					</div>
+					<div class="form-group">
+						<label for="name">Name</label>
+						<input class="form-control" type="text" name="name" placeholder="Name and Surname">
+					</div>
+					<p>By providing us with your email, you agree to the terms of our Privacy Policy.
+					</p>
+					<button class="formButton" type="submit" >Gönder</button>
+				</form>
+
+			</div>
+		</div>
+	</section>
+
+
+	<section id="info">
+		<div class="body">
+			<div class="content">
+				<h5>Clarusway AIR Presents:</h5>
+				<p>Clarusway Air presents a series of FREE courses that are indispensable for IT learners – vital and free like air. We offer the most comprehensive free IT training in the industry due to a commitment to providing the highest quality of learning to all. You can experience the academic excellence of our curated courses independent from your background – you can be a coding newbie or an IT professional who wants to build new skills.</p>
+				<a class="register" href="">Register Now</a>
+			</div>
+			<div class="image">
+				<img src="c.png" alt="">
+			</div>
+		</div>
+	</section>
+
 
 </body>
 </html>
+
