--- a/main.html
+++ b/main.html
@@ -66,11 +66,11 @@
 
 			<div class="card">
 				<img src="r1.jpg">
-			<div class="content">
+				<div class="content">
 				<h2>AWS/Devops</h2>
 				<p>Learn the fundamentals of cloud computing with using AWS in addition to learning Network basics, Linux, shell scripting, and Git. Also, you will master the most popular DevOps tools such as Docker, Kubernetes, Ansible, Terraform, Jenkins, Prometheus, and Grafana.</p>
 				<a href="">Browse More</a>
-			</div>
+				</div>
 			</div>
 
 			<div class="card">
@@ -172,6 +172,131 @@
 		</div>
 	</section>
 
+	<!--<section id="payment">
+		<div class="cards">
+			<h1>Learn About Our Easy Payment Options</h1>
+		<div class="cards-2">
+
+			
+			<div class="card">
+				<i class="fa-solid fa-tags"></i>
+				<div class="content">
+					<h5>Upfront Tuition</h5>
+					<p>Pay upfront, pay less</p>
+					<a href="">Learn More...</a>
+				</div>
+			</div>
+
+			<div class="card">
+				<i class="fa-solid fa-tags"></i>
+				<div class="content">
+					<h5>Upfront Tuition</h5>
+					<p>Pay upfront, pay less</p>
+					<a href="">Learn More...</a>
+				</div>
+			</div>
+
+			<div class="card">
+				<i class="fa-solid fa-tags"></i>
+				<div class="content">
+					<h5>Upfront Tuition</h5>
+					<p>Pay upfront, pay less</p>
+					<a href="">Learn More...</a>
+				</div>
+			</div>
+
+			<div class="card">
+				<i class="fa-solid fa-tags"></i>
+				<div class="content">
+					<h5>Upfront Tuition</h5>
+					<p>Pay upfront, pay less</p>
+					<a href="">Learn More...</a>
+				</div>
+			</div>
+		</div>
+		</div>
+		
+	</section>-->
+
+	
+
+	<footer>
+		<div class="footer">
+
+			<div class="sec">
+				<ul>
+					<li><img src="logo-white.png" alt="" style="width:250px;"></li>
+					<li><p>Clarusway provides quality IT training with reasonable prices to prepare individuals for next-generation jobs! From beginners to IT professionals, we offer cutting-edge programs used today by leading corporations.</p></li>
+					<li><a href="">Subscribe to Our Newsletter</a></li>
+					<li><input type="text" placeholder="Email"></li>
+					<li><a class="button" href="">Subscribe</a></li>
+				</ul>
+			</div>
+
+			
+
+			<div class="sec">
+				<p class="footer-heading">Follow Us</p>
+				<ul class="social-media">
+					<li><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
+					<li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+					<li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+					<li><a href=""><i class="fa-brands fa-linkedin"></i></a></li>
+
+				</ul>
+
+					<ul class="footer-heading-2"><a class="footer-heading" href="">Resources</a>
+						<li><a  href="">Watch Info</a></li>
+						<li><a href="">Get Professional Advice</a></li>
+						<li><a href="">Privacy Policy</a></li>
+						<li><a href="">Income Share Agreement</a></li>
+						<li><a href="">Career Management System</a></li>
+					</ul>
+					
+					
+				</ul>
+			</div>
+
+			<div class="sec">
+				<ul>
+					<li class="footer-heading"><a href="">Courses</a></li>
+					<li><a href="">Abous Us</a></li>
+					<li><a href="">Contact</a></li>
+					<li><a href="">Contact</a></li>
+					<li><a href="">Tuition</a></li>
+				</ul>
+
+				<ul>
+					<li class="footer-heading quick-links"><a href="">Quick Links</a></li>
+					<li><a href="">Abous Us</a></li>
+					<li><a href="">Contact</a></li>
+					<li><a href="">Contact</a></li>
+					<li><a href="">Tuition</a></li>
+				</ul>
+			</div>
+
+			<div class="sec">
+				<ul class="deneme">
+					<li class="footer-heading"><a href="">Contact Info</a></li>
+					<li ><a href=""> <span class="simple-title"><i class="fa-solid fa-house"></i>Address</span> </a><p>1775 Tysons Blvd. 5th Floor.
+						Tysons, VA 22102</p></li>
+					<li ><a href=""><span class="simple-title"><i class="fa-solid fa-envelope"></i>Email</span></a><p>contact@clarusway.com</p></li>
+					<li ><a href=""><span class="simple-title"><i class="fa-solid fa-phone"></i>Phone</span></a><p>+1 (571) 360 66 77</p></li>
+					<li ><a href=""><span class="simple-title"><i class="fa-brands fa-whatsapp"></i>Whatsapp</span></a><p>+1 (571) 360 66 77
+					</p></li>
+					<li ><a href=""><span class="simple-title"><i class="fa-solid fa-clock"></i>Hours</span></a><p>M-F: 2pm – 10pm <br>
+						S-S: 10am – 5pm</p></li>
+
+				</ul>
+			</div>
+
+			
+
+		</div>
+		<div class="author">
+			<p>All Rights Are Reserved - 2022</p>
+		</div>
+	</footer>
 
 </body>
 </html>
