--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 
 		</div>
 		<div class="author">
-			<p>All Rights Are Reserved - 2022</p>
+			<p>All Rights Are Reserved - 2022 Yusuf Kaymaz</p>
 		</div>
 	</footer>
 
